--- a/views/partials/jyp_delitos.jade
+++ b/views/partials/jyp_delitos.jade
@@ -1,9 +1,9 @@
-div.info(ng-controller="PostuladoCtrl")
+div.info_wrapper(ng-controller="PostuladoCtrl" )
    div.navegacion_hechos
       button.add_action.right(ng-click="add_delito()")
       div.empty(ng-hide="delitos.length") No hay delitos para este postulado.
       div.hecho_lista(ng-show="delitos.length") Hay {{delitos.length}} delitos para este postulado.
-         div.hecho_titulo(ng-class="{selected: $index==selectedDelitoIndex}"  ng-click="get_delito($index)" ng-repeat="delito in delitos") {{delito.titulo}}
+         div.hecho_titulo(ng-class="{selected: $index==selectedDelitoIndex, dirty: delito.dirty}" ng-click="get_delito($index)" ng-repeat="delito in delitos") {{delito.titulo}}
 
 
    div.dialog.create_delito(ng-show="create_delito")    
@@ -17,83 +17,95 @@ div.info(ng-controller="PostuladoCtrl")
 
    div.datos_version(ng-show="delitos.length")
       h2.info_subtitle Datos versión
+        div(input-inline-edit="delito.titulo" class="inline inline-heading" on-save="set_dirty()" ng-focus="edit()" tabindex="5")
       table.tab_form_table
          tr
             td
                label.small_form Delito
-               div(input-inline-select-codigo="delito.codigo_penal" codigos="codigos" opts="c.nombre for c in codigos" ng-focus="edit()" tabindex="6")
+               div(input-inline-select-codigo="delito.codigo_penal" on-save="set_dirty()" codigos="codigos" opts="c.nombre for c in codigos" ng-focus="edit()" tabindex="6")
             td
                label.small_form Tipo de versión
-               div(input-inline-edit="delito.tipo_version" ng-focus="edit()" tabindex="7")
+               div(input-inline-edit="delito.tipo_version" on-save="set_dirty()" ng-focus="edit()" tabindex="7")
             td
                label.small_form Fecha de la versión
-               div(input-inline-date="delito.fecha_version" ng-focus="edit()" tabindex="8")
+               div(input-inline-date="delito.fecha_version" on-save="set_dirty()" ng-focus="edit()" tabindex="8")
          tr
             td
                label.small_form Fiscalía
-               div(input-inline-edit="delito.fiscalia" ng-focus="edit()" tabindex="9")
+               div(input-inline-edit="delito.fiscalia" on-save="set_dirty()" ng-focus="edit()" tabindex="9")
             td
                label.small_form Sitio de reclusión
-               div(input-inline-edit="delito.sitio_reclusion" ng-focus="edit()" tabindex="10")
+               div(input-inline-edit="delito.sitio_reclusion" on-save="set_dirty()" ng-focus="edit()" tabindex="10")
             td
                label.small_form Bloque de postulación
-               div(input-inline-edit="delito.bloque_post" ng-focus="edit()" tabindex="11")
+               div(input-inline-edit="delito.bloque_post" on-save="set_dirty()" ng-focus="edit()" tabindex="11")
 
-      h2.info_subtitle Datos de la acción
+      h2.info_subtitle.inline Datos de la acción
+      div.inline.datos_acciones(ng-controller="FileUploadCtrl")
+        button.buttons.mleft10(ng-show='delito.video_path' ng-click="ver_video()") Ver video
+        button.buttons.mleft10(ng-hide='delito.video_path' ng-click="busca_video()") Cargar video 
+        input(style="display: none" type="file" ng-model-instant id="fileToUpload" onchange="angular.element(this).scope().setFiles(this)") 
+        button.buttons.mleft10( ng-show="subirVideo" ng-click="uploadFile()") Subir video 
+        label.inline.small_text(ng-show="subirVideo" id="uploadFileName")
+        div(ng-show="progressVisible")
+            div.percent {{progress}}%
+            div.progress-bar
+                div.uploaded(ng-style="{'width': progress+'%'}")
+
       table.tab_form_table
          tr
             td
                label.small_form Hora en mención del hecho
-               div(input-inline-edit="delito.hora_mencion" ng-focus="edit()" ng-focus="edit()" tabindex="12")
+               div(input-inline-edit="delito.hora_mencion" on-save="set_dirty()" ng-focus="edit()" ng-focus="edit()" tabindex="12")
             td
                label.small_form Hecho enunciado con/sin responsabilidad
-               div(input-inline-edit="delito.responsabilidad" ng-focus="edit()" tabindex="13")
+               div(input-inline-edit="delito.responsabilidad" on-save="set_dirty()" ng-focus="edit()" tabindex="13")
             td
                label.small_form Hecho confesado
-               div(input-inline-edit="delito.confesado" ng-focus="edit()" tabindex="14")
+               div(input-inline-edit="delito.confesado" on-save="set_dirty()" ng-focus="edit()" tabindex="14")
          tr
             td
                label.small_form Narración del hecho
-               div(input-inline-edit="delito.narracion" ng-focus="edit()" tabindex="15")
+               div(input-inline-edit="delito.narracion" on-save="set_dirty()" ng-focus="edit()" tabindex="15")
             td
                label.small_form Clasificación del delito
-               div(input-inline-edit="delito.clasificacion" ng-focus="edit()" tabindex="16")
+               div(input-inline-edit="delito.clasificacion" on-save="set_dirty()" ng-focus="edit()" tabindex="16")
             td
                label.small_form Fecha ocurrencia del hecho
-               div(input-inline-date="delito.fecha_ocurrencia" ng-focus="edit()" tabindex="17")
+               div(input-inline-date="delito.fecha_ocurrencia" on-save="set_dirty()" ng-focus="edit()" tabindex="17")
 
       h2.info_subtitle Georeferenciación
       table.tab_form_table
          tr
             td
                label.small_form Pais
-               div(input-inline-edit="delito.pais" ng-focus="edit()" tabindex="18")
+               div(input-inline-edit="delito.pais" on-save="set_dirty()" ng-focus="edit()" tabindex="18")
             td
                label.small_form Departamento
-               div(input-inline-edit="delito.dept" ng-focus="edit()" tabindex="19")
+               div(input-inline-edit="delito.dept" on-save="set_dirty()" ng-focus="edit()" tabindex="19")
             td
                label.small_form Municipio
-               div(input-inline-edit="delito.municipio" ng-focus="edit()" tabindex="20")
+               div(input-inline-edit="delito.municipio" on-save="set_dirty()" ng-focus="edit()" tabindex="20")
          tr
             td
                label.small_form Corregimiento
-               div(input-inline-edit="delito.corregimiento" ng-focus="edit()" tabindex="21")
+               div(input-inline-edit="delito.corregimiento" on-save="set_dirty()" ng-focus="edit()" tabindex="21")
             td
                label.small_form Vereda
-               div(input-inline-edit="delito.vereda" ng-focus="edit()" tabindex="22")
+               div(input-inline-edit="delito.vereda" on-save="set_dirty()" ng-focus="edit()" tabindex="22")
             td
                label.small_form Finca
-               div(input-inline-edit="delito.finca" ng-focus="edit()" tabindex="23")
+               div(input-inline-edit="delito.finca" on-save="set_dirty()" ng-focus="edit()" tabindex="23")
          tr
             td
                label.small_form Profesión - Ocupación
-               div(input-inline-edit="delito.via" ng-focus="edit()" tabindex="24")
+               div(input-inline-edit="delito.via" on-save="set_dirty()" ng-focus="edit()" tabindex="24")
             td
                label.small_form Servicio Militar
-               div(input-inline-edit="delito.direccion" ng-focus="edit()" tabindex="25")
+               div(input-inline-edit="delito.direccion" on-save="set_dirty()" ng-focus="edit()" tabindex="25")
             td
                label.small_form Grado de instrucción - Nivél academico
-               div(input-inline-edit="delito.otro_lugar" ng-focus="edit()" tabindex="26")
+               div(input-inline-edit="delito.otro_lugar" on-save="set_dirty()" ng-focus="edit()" tabindex="26")
 
          button.action(ng-click="map()") Ver mapa
 
@@ -103,33 +115,33 @@ div.info(ng-controller="PostuladoCtrl")
          tr
             td
                label.small_form Nombres
-               div(input-inline-edit="participante.nombres" ng-focus="edit()" tabindex="31")
+               div(input-inline-edit="participante.nombres" on-save="set_dirty()" ng-focus="edit()" tabindex="31")
             td
                label.small_form Apellidos
-               div(input-inline-edit="participante.apellidos" ng-focus="edit()" tabindex="32")
+               div(input-inline-edit="participante.apellidos" on-save="set_dirty()" ng-focus="edit()" tabindex="32")
             td
                label.small_form Alias
-               div(input-inline-edit="participante.alias" ng-focus="edit()" tabindex="33")
+               div(input-inline-edit="participante.alias" on-save="set_dirty()" ng-focus="edit()" tabindex="33")
          tr
             td
                label.small_form Grupo armado pertenencia
-               div(input-inline-edit="participante.pertenencia" ng-focus="edit()" tabindex="34")
+               div(input-inline-edit="participante.pertenencia" on-save="set_dirty()" ng-focus="edit()" tabindex="34")
             td
                label.small_form Hecho confesado en versión libre del coparticipe
-               div(input-inline-edit="participante.confesado" ng-focus="edit()" tabindex="35")
+               div(input-inline-edit="participante.confesado" on-save="set_dirty()" ng-focus="edit()" tabindex="35")
             td
                label.small_form Hora en mención del hecho
-               div(input-inline-edit="participante.hora_mencion" ng-focus="edit()" tabindex="36")
+               div(input-inline-edit="participante.hora_mencion" on-save="set_dirty()" ng-focus="edit()" tabindex="36")
          tr
             td
                label.small_form Otros implicados en el hecho
                div.participante(ng-repeat="otro in participante.otros_implicados")
                   button.add_action(ng-click="add_otro()") 
-                  div(input-inline-edit="otro.nombres" ng-focus="edit()" tabindex="36")
-                  div(input-inline-edit="otro.apellidos" ng-focus="edit()" tabindex="36")
-                  div(input-inline-edit="otro.alias" ng-focus="edit()" tabindex="36")
-                  div(input-inline-edit="otro.pertenencia" ng-focus="edit()" tabindex="36")
-                  div(input-inline-edit="otro.participacion" ng-focus="edit()" tabindex="36")
+                  div(input-inline-edit="otro.nombres" on-save="set_dirty()" ng-focus="edit()" tabindex="36")
+                  div(input-inline-edit="otro.apellidos" on-save="set_dirty()" ng-focus="edit()" tabindex="36")
+                  div(input-inline-edit="otro.alias" on-save="set_dirty()" ng-focus="edit()" tabindex="36")
+                  div(input-inline-edit="otro.pertenencia" on-save="set_dirty()" ng-focus="edit()" tabindex="36")
+                  div(input-inline-edit="otro.participacion" on-save="set_dirty()" ng-focus="edit()" tabindex="36")
 
       h2.info_subtitle Victimas
       div.victimas Numero de victimas: {{ victimas.length }}
@@ -138,22 +150,22 @@ div.info(ng-controller="PostuladoCtrl")
          tr
             td
                label.small_form Nombre de la victima
-               div(input-inline-edit="v.nombres" ng-focus="edit()" tabindex="31")
+               div(input-inline-edit="v.nombres" on-save="set_dirty()" ng-focus="edit()" tabindex="31")
             td
                label.small_form Apellidos de la victima
-               div(input-inline-edit="v.apellidos" ng-focus="edit()" tabindex="32")
+               div(input-inline-edit="v.apellidos" on-save="set_dirty()" ng-focus="edit()" tabindex="32")
             td
                label.small_form Oficio de la victima
-               div(input-inline-edit="v.oficio" ng-focus="edit()" tabindex="33")
+               div(input-inline-edit="v.oficio" on-save="set_dirty()" ng-focus="edit()" tabindex="33")
          tr
             td
                label.small_form Perfil de la victima
-               div(input-inline-edit="v.perfil" ng-focus="edit()" tabindex="34")
+               div(input-inline-edit="v.perfil" on-save="set_dirty()" ng-focus="edit()" tabindex="34")
             td
                label.small_form Victima enunciada por el postulado o por fiscalía
-               div(input-inline-edit="v.enunciada_por" ng-focus="edit()" tabindex="35")
+               div(input-inline-edit="v.enunciada_por" on-save="set_dirty()" ng-focus="edit()" tabindex="35")
             td
                label.small_form Victima enunciada por el postulado o por fiscalía
-               div(input-inline-edit="v.datos_completos" ng-focus="edit()" tabindex="35") 
+               div(input-inline-edit="v.datos_completos" on-save="set_dirty()" ng-focus="edit()" tabindex="35") 
 
       
