--- a/public/css/main.css
+++ b/public/css/main.css
@@ -356,6 +356,7 @@ li.info_tab:hover {
   float: left;
   width: 100px;
   height: 100px;
+  cursor: pointer;
 }
 
 .info_col {
@@ -660,4 +661,55 @@ td.actions {
     border-radius: 10px;
     background-image: -webkit-gradient(linear, left top, left bottom, from(#66cc00), to(#4b9500));
     border-image: initial;
+}
+
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    filter:alpha(opacity=50);
+    -moz-opacity:0.5;
+    -khtml-opacity: 0.5;
+    opacity: 0.5;
+    z-index: 100;
+}
+
+#video_container {
+    z-index:  2000;
+    position: absolute;
+    left: -50%;
+    bottom: 100px;
+}
+
+.video_wrapper {
+    position: absolute;
+    left: 50%;
+}
+
+.hecho_lista_title {
+  margin-bottom: 15px;
+}
+
+.admin_portal {
+  margin: 0 auto; 
+  width: 1200px; 
+  padding-top: 20px;
+}
+
+.page_title {
+  color: #003b6f;
+}
+
+ul.lista_acciones {
+  margin-left: 50px;
+}
+
+li.acciones_link {
+  color: #003b6f;
+  font-size: 18px;
+  line-height: 32px;
+  cursor: pointer;
 }
