--- a/views/partials/postulado.jade
+++ b/views/partials/postulado.jade
@@ -3,9 +3,13 @@ div(ng-controller="PostuladoCtrl")
     div.actions.right
       button.buttons.action_button(ng-click="save()") Salvar
       button.buttons.action_button(ng-click="cancel()") Cancelar
-      div.save_indicator
     div.postulado_info
-      div.postulado_img
+      div.postulado_img(ng-controller="FileUploadCtrl" ng-click="upload_pic()")
+        div.picture()        
+        img(ng-show="postulado.picture" src="{{postulado.picture}}" width="100px" height="100px")
+        input(style="display: none" type="file" ng-model-instant id="fileToUpload" onchange="angular.element(this).scope().setFiles(this)")
+        label.inline.small_text(ng-show="subirImagen" id="uploadFileName")
+        button.mleft10( ng-show="subirImagen" ng-click="uploadImagen()") Subir imagen 
       div.info_general
         label Nombres
         div(input-inline-edit="postulado.nombres" tabindex="1")
