fixed video upload again

--- a/views/partials/jyp_delitos.jade
+++ b/views/partials/jyp_delitos.jade
@@ -46,7 +46,7 @@ div.info_wrapper(ng-controller="PostuladoCtrl" )
       div.inline.datos_acciones(ng-controller="FileUploadCtrl")
          button.buttons.mleft10(ng-show='delito.video_path' ng-click="ver_video()") Ver video
          button.buttons.mleft10(ng-hide='delito.video_path' ng-click="busca_video()") Cargar video 
-         input(style="display: none" type="file" ng-model-instant id="fileToUpload" onchange="angular.element(this).scope().setFiles(this)") 
+         input(style="display: none" type="file" ng-model-instant id="videoToUpload" onchange="angular.element(this).scope().setFiles(this)") 
          button.buttons.mleft10( ng-show="subirVideo" ng-click="uploadFile()") Subir video 
          label.inline.small_text(ng-show="subirVideo" id="uploadFileName")
          div(ng-show="progressVisible")
